--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@google-cloud/vision": "^5.1.0",
+    "@tensorflow/tfjs-node": "3.1.0",
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2"
