--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "resend": "^4.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
