--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
-    "resend": "^4.3.0",
+    "nodemailer": "^7.0.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
